[package]
name = "semantix"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
derive = "1.0.0"
dotenvy = "0.15.7"
hyper = "1.8.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde_json = "1.0.149"
blake3 = "1.8.3"
blake-hash = "0.4.1"
serde_canonical_json = "1.0.0"
dashmap = "6.1.0"
